--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,15 +1,17 @@
-version : 0.2
+version: 0.2
 
 phases:
-  install :
-  commands:
-    - echo Installing NGINX
-    - sudo apt-get install -y nginx
-    - echo Starting NGINX
+  install:
+    commands:
+      - echo Installing NGINX
+      - sudo apt-get update
+      - sudo apt-get install -y nginx
+      - echo Starting NGINX
   build:
     commands:
       - echo Build started on `date`
       - cp index.html /var/www/html/index.html
-    artifacts:
-      files:
-        - /var/www/html/index.html
+
+artifacts:
+  files:
+    - index.html
